Fix philosophy page responsive issues on small screens

--- a/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
+++ b/website/main-pages/ballerina.io-website-theme/css/philosophy-page.css
@@ -723,3 +723,13 @@ div.cPhilosophyWidgetContainer.codeNativeBox {
 .cInnerPageContentCol {
     padding-left: 0;
 }
+
+@media (max-width: 991px) and (min-width: 768px) {
+    .cGreenTitle.cPhil-box-titles {
+        margin-top: 50px !important;
+    }
+    .cPhil-Gray,
+    .cPhil-green {
+        min-height: 270px;
+    }
+}
